--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,4 +1,4 @@
-email: 'contact@myllenyl.com'
-phone: '+918049563512'
+email: 'contact@tchzo.com'
+phone: '+919003074838'
 contact_button_link: 'Book Your Demo'
 url: '/request-demo.md'
