--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,4 +1,4 @@
 email: 'contact@tchzo.com'
 phone: '+919003074838'
-contact_button_link: 'Book Your Demo'
+contact_button_link: 'Call Us'
 url: '/request-demo.md'
