--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -1,7 +1,10 @@
+#842761
+#e97e40
+
 faq:
 - heading: Security
   question: What protections does tchzo solutions use to protect our data?
-  ans: "ConnectEd is hosted on the Google Cloud. Google invests heavily in securing its infrastructure, which is designed to keep your data secure throughout the entire information processing lifecycle. The security of this infrastructure is designed in progressive layers: Operational Security, Internet Communication, Storage Services, User Identity, Service Deployment, Hardware Infrastructure"
+  ans: "All our solutions is hosted on the Google Cloud. Google invests heavily in securing its infrastructure, which is designed to keep your data secure throughout the entire information processing lifecycle. The security of this infrastructure is designed in progressive layers: Operational Security, Internet Communication, Storage Services, User Identity, Service Deployment, Hardware Infrastructure"
   weight: 1
 - heading: "Data Retention & Ownership"
   question: "What are tchzo policies regarding our data and data portability?"
@@ -24,20 +27,20 @@ faq:
   ans: "Due to the sensitive nature of data, we may not expose the data to other systems. But we work with customer if it is needed by them for integeration."
   weight: 6
 - heading: "Usability"
-  question: "Is ConnectEd is user-friendly?"
+  question: "Is tchzo solution user-friendly?"
   ans: "Careful thinking has been given to how the user interface is designed, from both a technical and usability standpoint."
   weight: 7
 - heading: "Contractual Flexibility"
   question: "What contract options are available?"
-  ans: "Our goal is to provide convenient, flexible contract options to address the widest range of budget needs. Please check the pricing section for more information or mail us at contct@myllenyl.com."
+  ans: "Our goal is to provide convenient, flexible contract options to address the widest range of budget needs. Please check the pricing section for more information or mail us at contct@tchzo.com."
   weight: 8
 - heading: "Single or Multi-Tenant?"
   question: "What can you tell me about your infrastructure?"
-  ans: "Strategic Systems uses a single-tenant SaaS approach. Single-tenancy refers to a principle in software architecture where a single instance of the software runs on a server, serving single client organization. Architectures and software instances (or hardware systems) operate on behalf of single client organizations. With a single-tenant architecture, we are ble to customize according to the perspective client. Some of the more prominent benefits of this architecture include: Greater scalability, Lower subscription fees, Better service, Faster upgrades, Customiztion"
+  ans: "Strategic Systems uses a multi-tenant SaaS approach. multi-tenancy refers to a principle in software architecture where a multiple instance of the software runs on a server, serving multiple client organization. Architectures and software instances (or hardware systems) operate on behalf of multiple client organizations. With a multiple-tenant architecture, but we are ble to customize according to the perspective client. Some of the more prominent benefits of this architecture include: Greater scalability, Lower subscription fees, Better service, Faster upgrades, Customiztion"
   weight: 9
 - heading: "Branding"
-  question: "What is needed for our branding?"
-  ans: "We may require logo and a favicon(This we can design from your logo). Domain name preferred. If not provided myllenyl sub domin will be provided. We provide https SSL secured for your nd our sub domain."
+  question: "What is needed for our branding and promotion?"
+  ans: "We may require logo in your profile. You can alsp create offers for your customer"
   weight: 10
 - heading: "Initial data"
   question: "Do you provide initial loading of data?"
@@ -49,7 +52,7 @@ faq:
   weight: 12
 - heading: "Account opening"
   question: "Who can open a account with tchzo?"
-  ans: "tchzo's ConnectEd is available for schools located anywhere in the World."
+  ans: "tchzo's solutions are available for business located anywhere in the World."
   weight: 13
 - heading: "Commitment"
   question: "Is there any long-term commitment?"
@@ -57,7 +60,7 @@ faq:
   weight: 14
 - heading: "Payment Calculation"
   question: "How payment is calculated?"
-  ans: "Payment is calculated based on per student basis. For each and every student three users can access their account. Staff and admin can use the solution free of charge."
+  ans: "Payment is calculated based on per account basis. For each and every account multiple customers can be created free of charge."
   weight: 15
 - heading: "Billing"
   question: "How will I be billed for this solution?"
@@ -73,13 +76,13 @@ faq:
   weight: 18
 - heading: "Hardware"
   question: "Does the solution come with hardware"
-  ans: "No, tchzo solution come with the app software, the platform and support. Client and admin hs to use their mobile and for admin they have the flexibility to operate the software in a PC, tablet or mobile."
+  ans: "No, tchzo solution come with the app and web software, the platform and support. Client and admin has to use their mobile or web to operate the software"
   weight: 19
 - heading: "Additional services"
   question: "Do I need to buy additional services"
-  ans: "No, our solution is service offered through cloud and customized to your school there is no need for other additional service to operate our solution."
+  ans: "No, our solution is offered through cloud and customized to your business there is no need for other additional service to operate our solution."
   weight: 20
 - heading: "Installation"
   question: "How do I install the tchzo software"
-  ans: "We setup the solution for you. Data like user account, permission, groups can be created by users with admin privileges."
+  ans: "We setup the solution for you. Data like user account, permission, cliets can be created by users"
   weight: 21
