--- a/_data/pricing.yml
+++ b/_data/pricing.yml
@@ -1,28 +1,30 @@
+#842761
+#e97e40
   pricing:
-  - question: "Who can open a account with tchzo?"
-    ans: "tchzo's ConnectEd is available for schools located anywhere in the World."
+  - question: "Who can buy solutions with tchzo?"
+    ans: "tchzo's solutions is available for businesses located anywhere in the World."
     weight: 1
   - question: "Is there any long-term commitment?"
-    ans: "All tchzo's ConnectEd solution have a monthly commitment. You can close your account at any time. If you prefer we do offer premium plans on an annual basis."
+    ans: "All tchzo's solution have a monthly commitment. You can close your account at any time. If you prefer we do offer premium plans on an annual basis."
     weight: 2
   - question: "How payment is calculated?"
-    ans: "Payment is calculated based on per student basis. For each and every student three users can access their account. Staff and admin can use the solution free of charge."
+    ans: "Payment is calculated based on per user basis. Staff and admin can use the solution free of charge."
     weight: 3
   - question: "How will I be billed for this solution?"
-    ans: "We offer flexible billing period like monthly, quarterly, half yearly and annual basis. You cn also change your plan anytime during and the same will be reflected in the next billing cycle."
+    ans: "We offer flexible billing period like monthly, quarterly, half yearly and annual basis. You can also change your plan anytime during and the same will be reflected in the next billing cycle."
     weight: 4
   - question: "Whom to contact on pricing"
     ans: "Please drop a mail to contact@tchzo.com and we will respond to all your queries."
     weight: 5
   - question: "What payment methods can I use"
-    ans: "Our goal is to be as flexible as possible to meet the needs of your business so you can focus on what’s important. If you would like to discuss options besides online payments, please email us at contact@myllenyl.com"
+    ans: "Our goal is to be as flexible as possible to meet the needs of your business so you can focus on what’s important. If you would like to discuss options besides online payments, please email us at contact@tchzo.com"
     weight: 6
   - question: "Does the solution come with hardware"
-    ans: "No, tchzo solution come with the app software, the platform and support. Client and admin hs to use their mobile and for admin they have the flexibility to operate the software in a PC, tablet or mobile."
+    ans: "No, tchzo solution come with the app software, the platform and support. Client and admin has to use their PC, tablet or mobile."
     weight: 7
   - question: "Do I need to buy additional services"
-    ans: "No, our solution is service offered through cloud and customized to your school there is no need for other additional service to operate our solution."
+    ans: "No, our solution is service offered through cloud and customized to your business there is no need for other additional service to operate our solution."
     weight: 8
   - question: "How do I install the tchzo software"
-    ans: "We setup the solution for you. Data like user account, permission, groups can be created by users with admin privileges."
+    ans: "We setup the solution for you. Data like user account, permission, groups can be created by users with privileges."
     weight: 9
