--- a/_data/products.yml
+++ b/_data/products.yml
@@ -4,7 +4,7 @@
     title: "salonzo?"
     weight: 1
   - text: "otzo connects auto mechanis with their customers. THis one stop solution helps in managing garages smart and efficiently"
-    image: "../images/product/1.svg"
+    image: "../images/product/otzo.svg"
     title: "otzo?"
     weight: 2
   - text: "otzo and salonzo connects all stakeholders of a customer with their business. It is a unified communication tool for customers, staff, and business owners"
