--- a/_data/products.yml
+++ b/_data/products.yml
@@ -1,10 +1,10 @@
   products:
   - text: "Salonzo is solution especially tailored to beauty parlors, salons and spa's"
-    image: "../images/product/1.svg"
+    image: "../images/product/salonzo.svg"
     title: "salonzo"
     weight: 1
   - text: "otzo connects auto mechanis with their customers. THis one stop solution helps in managing garages smart and efficiently"
-    image: "../images/product/2.svg"
+    image: "../images/product/otzo.svg"
     title: "otzo"
     weight: 2
   - text: "otzo and salonzo connects all stakeholders of a customer with their business. It is a unified communication tool for customers, staff, and business owners"
