--- a/_data/products.yml
+++ b/_data/products.yml
@@ -33,7 +33,7 @@
     weight: 8
   - text: "Realtime syncing makes it easy for your users to access their data from any device: web or mobile, and it helps your users in sync"
     image: "../images/product/7.svg"
-    title: "Realtime Solution
+    title: "Realtime Solution"
     weight: 9
   - text: "A list of features that makes every stakeholder more productive and get connected"
     image: "../images/product/8.svg"
